testsuite/poke.pkl/char-diag-1.pk
/* { dg-do compile } */

defvar foo = '\129'; /* { dg-error "" } */
